Meto el primer article en la página web.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <body>
     <header>
       Página de test de Continuous Deployment de Víctor Rivas para Desarrollo Ágil</header>
+      <article>
+        Primer artículo en la págoina web.
+      </article>
     </header>
   </body>
 </html>
