Segundo article en rama main

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       <article>
         Primer artículo en la págoina web.
       </article>
+      <article>
+        Ahora, el segundo  artículo en la págoina web.
+      </article>
     </header>
   </body>
 </html>
